Fix code blocks overflowing
See issue #17.

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -74,6 +74,7 @@ code {
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
+  white-space: pre-wrap;
   padding: 1rem;
 }
 
